--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Just For Kicks Sneaker Community</title>
 </head>
-<body>
-	<h1>Hello World!</h1>
-</body>
+	<body>
+		<img src="sneakers.jpg">
+		<h1>My Top 5 Favorite Pair of Jordan's</h1>
+		<p>Find out more about sneakers here at <a href="http://www.sneakerpedia.com"> Sneakerpedia</a></p>
+		<h2>Starting with my all time favorite</h2>
+		<ol>
+			<li>Jordan IV</li>
+			<li>Jordan VII</li>
+			<li>Jordan XI</li>
+			<li>Jordan V</li>
+			<li>Jordan I</li>
+		</ol>
+	</body>
 </html>
