updated release 1 get fancy with row and column

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Top 3 Players</title>
+	<title>Top 3 choices</title>
 </head>
 <body>
-	<h1>Top 3 Players</h1>
+	<h1>Top 3 Food Chart</h1>
 <table border=1>
-  <tr>
-    <th>Name</th>
-    <th>Most Effective</th>
-  </tr>
-  <tr>
-    <td>Kevin</td>
-    <td>Speed & Quickness, pure shooter</td>
-  </tr>
-  <tr>
-    <td>David</td>
-    <td>Court vision, ability to create for others</td>
-  </tr>
     <tr>
-    <td>Alex</td>
-    <td>Craftiness & Ball handling </td>
-  </tr>
+      <th>1.</th>
+      <th>2.</th>
+      <th>3.</th>
+    </tr>
+    <tr>
+      <td colspan="2"> Never Satisfied, Always Hungry</td>
+      <td>Dim Sum</td>
+    </tr>
+    <tr>
+      <td rowspan="2">In & Out Burgers</td>
+      <td>Burger King</td>
+      <td>Cheese Puffs</td>
+    </tr>
+    <tr>
+      <td>Hot Dogs</td>
+      <td>Corn Dogs</td>
+    </tr>
 </table>
 </body>
 </html>
